--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-pro-sidebar": "^0.4.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-use-dimensions": "^1.2.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
