--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
+    "react-particles-js": "^3.4.1",
     "react-pro-sidebar": "^0.4.4",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-slick": "^0.27.13",
