--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.29.1",
     "node-sass": "4.14.1",
     "react": "^17.0.1",
+    "react-alice-carousel": "^2.1.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
@@ -20,7 +21,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
-    "react-slick": "^0.27.13",
+    "react-text-loop": "^2.3.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^0.2.4"
   },
