--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.3",
     "firebase": "^8.1.1",
     "moment": "^2.29.1",
     "node-sass": "4.14.1",
+    "password-hash": "^1.2.2",
     "react": "^17.0.1",
     "react-alice-carousel": "^2.1.0",
     "react-bootstrap": "^1.4.0",
