--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-REACT_APP_FIREBASE_API_KEY=AIzaSyBBeux0BDp8TtGC141neWu01HWTgCdsVdc
-REACT_APP_AUTH_DOMAIN=efkolia-db-dev.firebaseapp.com
-REACT_APP_DATABASE_URL=https=//efkolia-db-dev.firebaseio.com
-REACT_APP_PROJECT_ID=efkolia-db-dev
-REACT_APP_STORAGE_BUCKET=efkolia-db-dev.appspot.com
-REACT_APP_MESSAGING_SENDER_ID=780925216887
-REACT_APP_APP_ID=1:780925216887:web:5727e6e4ed03d875183e72
+REACT_APP_FIREBASE_API_KEY=AIzaSyBv-tPOhi3HC60iUW4Fjocx_jAAlRLxvcs
+REACT_APP_AUTH_DOMAIN=efkolia-db.firebaseapp.com
+REACT_APP_DATABASE_URL=https://efkolia-db.firebaseio.com
+REACT_APP_PROJECT_ID=efkolia-db
+REACT_APP_STORAGE_BUCKET=efkolia-db.appspot.com
+REACT_APP_MESSAGING_SENDER_ID=276431352795
+REACT_APP_APP_ID=1:276431352795:web:d190640807c3cb182b2dfe
