--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "dependencies": {
     "@prisma/client": "^2.16.0",
     "bcrypt": "^5.0.0",
+    "clsx": "^1.1.1",
+    "cntl": "^1.0.0",
     "next": "10.0.6",
     "next-auth": "^3.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.1",
+    "react-icons": "^4.2.0",
     "react-pro-sidebar": "^0.5.0"
   },
   "devDependencies": {
