--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "17.0.1",
     "react-hook-form": "^6.15.1",
     "react-icons": "^4.2.0",
-    "react-pro-sidebar": "^0.5.0"
+    "react-pro-sidebar": "^0.5.0",
+    "react-tooltip": "^4.2.13"
   },
   "devDependencies": {
     "@prisma/cli": "^2.16.0",
